More Java 17 changes
Signed-off-by: Taylor Smock <tsmock@meta.com>